# ll-practice

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/FalseSharing/: CMakeLists.txt  main.cpp
apps/HelloWorld/: CMakeLists.txt  main.cpp
apps/KernelPingPong/: CMakeLists.txt  main.cpp
apps/MemoryOrder/: CMakeLists.txt  main.cpp
include/practice/: hello_world.hpp
include/practice/blocking/: message_queue.hpp  shared_memory.hpp
include/practice/demo/: hello_world.hpp
include/practice/utils/: timing.hpp
src/: CMakeLists.txt  hello_world.cpp
src/blocking/: CMakeLists.txt  message_queue.cpp  shared_memory.cpp
src/demo/: CMakeLists.txt  hello_world.cpp
src/utils/: CMakeLists.txt  timing.cpp
