cmake_minimum_required(VERSION 3.22)
project(ll_practice)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
list(APPEND CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED YES)

set(MAIN_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(MAIN_APPS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/apps)
set(MAIN_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_subdirectory(${MAIN_SRC_DIR})
add_subdirectory(${MAIN_APPS_DIR})
